--- a/plugins/python_plugin_host_pybind11/CMakeLists.txt
+++ b/plugins/python_plugin_host_pybind11/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(python_plugin_host_pybind11 MODULE)
 
 target_sources(python_plugin_host_pybind11
-	PRIVATE "src/main.cpp" "src/modules.cpp")
+	PRIVATE "src/main.cpp" "src/core.cpp" "src/ui.cpp")
 target_link_libraries(python_plugin_host_pybind11 PRIVATE codepad)
 target_include_directories(python_plugin_host_pybind11 PRIVATE "../common/include")
 set_target_properties(python_plugin_host_pybind11
