--- a/plugins/command_pack/CMakeLists.txt
+++ b/plugins/command_pack/CMakeLists.txt
@@ -1,8 +1,7 @@
-add_library(command_pack MODULE)
+add_library(command_pack SHARED)
 
 target_sources(command_pack PRIVATE "src/main.cpp")
-target_link_libraries(command_pack PRIVATE codepad)
-target_include_directories(command_pack PRIVATE "../common/include")
+target_link_libraries(command_pack PRIVATE codepad editors)
+target_include_directories(command_pack PRIVATE "../common/include/")
 set_target_properties(command_pack
-	PROPERTIES
-		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+	PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
