--- a/plugins/python_plugin_host_pybind11/CMakeLists.txt
+++ b/plugins/python_plugin_host_pybind11/CMakeLists.txt
@@ -1,12 +1,11 @@
-add_library(python_plugin_host_pybind11 MODULE)
+add_library(python_plugin_host_pybind11 SHARED)
 
 target_sources(python_plugin_host_pybind11
 	PRIVATE "src/main.cpp" "src/core.cpp" "src/ui.cpp")
 target_link_libraries(python_plugin_host_pybind11 PRIVATE codepad)
 target_include_directories(python_plugin_host_pybind11 PRIVATE "../common/include")
 set_target_properties(python_plugin_host_pybind11
-	PROPERTIES
-		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+	PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 find_package(pybind11 CONFIG REQUIRED)
 target_link_libraries(python_plugin_host_pybind11
