--- a/plugins/editors/CMakeLists.txt
+++ b/plugins/editors/CMakeLists.txt
@@ -20,4 +20,5 @@ target_include_directories(editors
 set_target_properties(editors
 	PROPERTIES
 		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+		WINDOWS_EXPORT_ALL_SYMBOLS YES)
