--- a/plugins/command_pack/CMakeLists.txt
+++ b/plugins/command_pack/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(command_pack SHARED)
 
 target_sources(command_pack PRIVATE "src/main.cpp")
-target_link_libraries(command_pack PRIVATE codepad editors)
+target_link_libraries(command_pack PRIVATE codepad_core editors)
 target_include_directories(command_pack PRIVATE "../common/include/")
 set_target_properties(command_pack
 	PROPERTIES
