--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,6 +342,7 @@ endif()
 add_subdirectory("plugins/editors/")
 add_subdirectory("plugins/command_pack/")
 add_subdirectory("plugins/python_plugin_host_pybind11/")
+add_subdirectory("plugins/tree_sitter/")
 
 
 # main executable
