--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,7 @@ add_subdirectory("plugins/editors/")
 add_subdirectory("plugins/command_pack/")
 add_subdirectory("plugins/python_plugin_host_pybind11/")
 add_subdirectory("plugins/tree_sitter/")
+add_subdirectory("plugins/lsp/")
 
 
 # main executable
